--- a/config.yml
+++ b/config.yml
@@ -4,11 +4,11 @@ port_name: '/dev/ttyACM0'
 baud_rate: 115200
 # PWM of the step
 pwm: 220
-# Time sample
-ts: 0.005
+# Time sample in milliseconds
+ts: 5
 # Number of step to run
-nb_measure: 10
+nb_measure: 1
 # Number of sample taken per step
 nb_sample: 100
-# Waiting time between each measures
+# Waiting time between each measures in milliseconds
 wait_time: 1000
