--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: "3.6"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install -r python/requirements.txt
 # command to run tests
 script:
   - pytest
